--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -183,10 +183,10 @@
 					</ul>
 				</div>
 				<ul class="nav">
-					<li>Ò»</li>
-					<li>¶ş</li>
-					<li>Èı</li>
-					<li>ËÄ</li>
+					<li>ä¸€</li>
+					<li>äºŒ</li>
+					<li>ä¸‰</li>
+					<li>å››</li>
 				</ul>
 			</div>
 			<div class="code">
@@ -209,7 +209,7 @@
 				</div>
 			</div>
 			<div class="code">
-				<p>°´¼üÅÌ×óÓÒ¼ü£¬ÇĞ»»»ÃµÆÆ¬</p>
+				<p>æŒ‰é”®ç›˜å·¦å³é”®ï¼Œåˆ‡æ¢å¹»ç¯ç‰‡</p>
 				<p>$(".slider4").slider({easing:"backin",keyboardAble:true,hasTriggers:false,inEndEffect:"none"});</p>
 			</div>
 			<script type="text/javascript">
@@ -236,7 +236,7 @@
 				</div>
 			</div>
 			<div class="code">
-				<p>¹ö¶¯Êó±êÖĞÖá£¬ÇĞ»»»ÃµÆÆ¬</p>
+				<p>æ»šåŠ¨é¼ æ ‡ä¸­è½´ï¼Œåˆ‡æ¢å¹»ç¯ç‰‡</p>
 				<p>$(".slider5").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});</p>
 			</div>
 			<script type="text/javascript">
@@ -244,204 +244,204 @@
 			</script>
 			<div class="example">
 				<div class="call">
-					<h1>µ÷ÓÃ·½·¨£º</h1>
+					<h1>è°ƒç”¨æ–¹æ³•ï¼š</h1>
 					<p>$(selector).slider(options,callback(api));</p>
 				</div>
-				<h2> options²ÎÊı</h2>
+				<h2> optionså‚æ•°</h2>
 				<table>
 					<thead>
 						<tr>
-							<th width="150">²ÎÊı</th>
-							<th width="80">Ä¬ÈÏÖµ</th>
-							<th>ËµÃ÷</th>
+							<th width="150">å‚æ•°</th>
+							<th width="80">é»˜è®¤å€¼</th>
+							<th>è¯´æ˜</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>contentCls</td>
 							<td>content</td>
-							<td>ÂÖ²¥ÄÚÈİÁĞ±íµÄclass</td>
+							<td>è½®æ’­å†…å®¹åˆ—è¡¨çš„class</td>
 						</tr>
 						<tr class="even">
 							<td>navCls</td>
 							<td>nav</td>
-							<td>ÂÖ²¥µ¼º½ÁĞ±íµÄclass</td>
+							<td>è½®æ’­å¯¼èˆªåˆ—è¡¨çš„class</td>
 						</tr>
 						<tr>
 							<td>prevBtnCls</td>
 							<td>prev</td>
-							<td>ÏòÇ°Ò»²½µÄclass</td>
+							<td>å‘å‰ä¸€æ­¥çš„class</td>
 						</tr>
 						<tr class="even">
 							<td>nextBtnCls</td>
 							<td>next</td>
-							<td>ÏòºóÒ»²½µÄclass</td>
+							<td>å‘åä¸€æ­¥çš„class</td>
 						</tr>
 						<tr>
 							<td>activeTriggerCls</td>
 							<td>active</td>
-							<td>µ¼º½Ñ¡ÖĞÊ±µÄclass</td>
+							<td>å¯¼èˆªé€‰ä¸­æ—¶çš„class</td>
 						</tr>
 						<tr class="even">
 							<td>disableBtnCls</td>
 							<td>disable</td>
-							<td>°´¼ü²»¿ÉÓÃÊ±µÄclass</td>
+							<td>æŒ‰é”®ä¸å¯ç”¨æ—¶çš„class</td>
 						</tr>
 						<tr>
 							<td>hoverCls</td>
 							<td>hover</td>
-							<td>µ±Êó±êÒÆÖÁÏàÓ¦ÇøÓòÊ±»ñµÃµÄclass</td>
+							<td>å½“é¼ æ ‡ç§»è‡³ç›¸åº”åŒºåŸŸæ—¶è·å¾—çš„class</td>
 						</tr>
 						<tr class="even">
 							<td>steps</td>
 							<td>1</td>
-							<td>ÒÆ¶¯Ö¡Êı</td>
+							<td>ç§»åŠ¨å¸§æ•°</td>
 						</tr>
 						<tr>
 							<td>view</td>
-							<td>(¼ÆËã)</td>
-							<td>¿É¼ûÇøÓòÖ¡Êı</td>
+							<td>(è®¡ç®—)</td>
+							<td>å¯è§åŒºåŸŸå¸§æ•°</td>
 						</tr>
 						<tr class="even">
 							<td>direction</td>
 							<td>'x'</td>
-							<td>ÂÖ²¥µÄ·½Ïò</td>
+							<td>è½®æ’­çš„æ–¹å‘</td>
 						</tr>
 						<tr>
 							<td>inEndEffect</td>
 							<td>switch</td>
-							<td>²¥·Åµ½×îºóÒ»Ö¡Ê±µÄĞ§¹û£º"switch"±íÊ¾À´»ØÇĞ»»,"cycle"±íÊ¾Ñ­»·,"none"±íÊ¾ÎŞĞ§¹û</td>
+							<td>æ’­æ”¾åˆ°æœ€åä¸€å¸§æ—¶çš„æ•ˆæœï¼š"switch"è¡¨ç¤ºæ¥å›åˆ‡æ¢,"cycle"è¡¨ç¤ºå¾ªç¯,"none"è¡¨ç¤ºæ— æ•ˆæœ</td>
 						</tr>
 						<tr class="even">
 							<td>hasTriggers</td>
 							<td>true</td>
-							<td>ÊÇ·ñº¬ÓĞµ¼º½´¥·¢µã</td>
+							<td>æ˜¯å¦å«æœ‰å¯¼èˆªè§¦å‘ç‚¹</td>
 						</tr>
 						<tr>
 							<td>triggerCondition</td>
 							<td>'*'</td>
-							<td>´¥·¢µãµÄÌõ¼ş(ÓĞÊ±ĞèÅÅ³ıÒ»Ğ©½Úµã)</td>
+							<td>è§¦å‘ç‚¹çš„æ¡ä»¶(æœ‰æ—¶éœ€æ’é™¤ä¸€äº›èŠ‚ç‚¹)</td>
 						</tr>
 						<tr class="even">
 							<td>triggerType</td>
 							<td>mouse</td>
-							<td>µ¼º½´¥·¢ÊÂ¼ş:"mouse"±íÊó±êÒÆÈëÊ±´¥·¢,"click"±íÊ¾Êó±êµã»÷Ê±´¥·¢</td>
+							<td>å¯¼èˆªè§¦å‘äº‹ä»¶:"mouse"è¡¨é¼ æ ‡ç§»å…¥æ—¶è§¦å‘,"click"è¡¨ç¤ºé¼ æ ‡ç‚¹å‡»æ—¶è§¦å‘</td>
 						</tr>
 						<tr>
 							<td>activeIndex</td>
 							<td>0</td>
-							<td>Ä¬ÈÏÑ¡ÖĞÖ¡µÄË÷Òı</td>
+							<td>é»˜è®¤é€‰ä¸­å¸§çš„ç´¢å¼•</td>
 						</tr>
 						<tr class="even">
 							<td>pointerType</td>
 							<td>'click'</td>
-							<td>×óÓÒ¼ıÍ·µÄ´¥·¢ÊÂ¼ş:"mouse"±íÊó±êÒÆÈëÊ±´¥·¢,"click"±íÊ¾Êó±êµã»÷Ê±´¥·¢</td>
+							<td>å·¦å³ç®­å¤´çš„è§¦å‘äº‹ä»¶:"mouse"è¡¨é¼ æ ‡ç§»å…¥æ—¶è§¦å‘,"click"è¡¨ç¤ºé¼ æ ‡ç‚¹å‡»æ—¶è§¦å‘</td>
 						</tr>
 						<tr>
 							<td>auto</td>
 							<td>false</td>
-							<td>ÊÇ·ñ×Ô¶¯²¥·Å</td>
+							<td>æ˜¯å¦è‡ªåŠ¨æ’­æ”¾</td>
 						</tr>
 						<tr class="even">
 							<td>animate</td>
 							<td>true</td>
-							<td>ÊÇ·ñÊ¹ÓÃ¶¯»­»¬¶¯</td>
+							<td>æ˜¯å¦ä½¿ç”¨åŠ¨ç”»æ»‘åŠ¨</td>
 						</tr>
 						<tr>
 							<td>delay</td>
 							<td>3000</td>
-							<td>×Ô¶¯²¥·ÅÊ±Í£¶ÙµÄÊ±¼ä¼ä¸ô</td>
+							<td>è‡ªåŠ¨æ’­æ”¾æ—¶åœé¡¿çš„æ—¶é—´é—´éš”</td>
 						</tr>
 						<tr class="even">
 							<td>duration</td>
 							<td>500</td>
-							<td>ÂÖ²¥µÄ¶¯»­Ê±³¤</td>
+							<td>è½®æ’­çš„åŠ¨ç”»æ—¶é•¿</td>
 						</tr>
 						<tr>
 							<td>easing</td>
 							<td>'easeIn'</td>
-							<td>ÇĞ»»Ê±µÄ¶¯»­Ğ§¹û,¿ÉÑ¡µÄ¶¯»­º¯Êı°üÀ¨:swing,easeIn,easeOut,expoin,expoout,expoinout,elasin,elasout,elasinout,backin,backout,backinout,bouncein,bounceout,bounceinout</td>
+							<td>åˆ‡æ¢æ—¶çš„åŠ¨ç”»æ•ˆæœ,å¯é€‰çš„åŠ¨ç”»å‡½æ•°åŒ…æ‹¬:swing,easeIn,easeOut,expoin,expoout,expoinout,elasin,elasout,elasinout,backin,backout,backinout,bouncein,bounceout,bounceinout</td>
 						</tr>
 						<tr class="even">
 							<td>keyboardAble</td>
 							<td>false</td>
-							<td>ÊÇ·ñÔÊĞí¼üÅÌ°´¼ü¿ØÖÆ</td>
+							<td>æ˜¯å¦å…è®¸é”®ç›˜æŒ‰é”®æ§åˆ¶</td>
 						</tr>
 						<tr>
 							<td>touchable</td>
 							<td>true</td>
-							<td>ÊÇ·ñÔÊĞí´¥Åö</td>
+							<td>æ˜¯å¦å…è®¸è§¦ç¢°</td>
 						</tr>
 						<tr class="even">
 							<td>sensitivity</td>
 							<td>0.4</td>
-							<td>´¥ÃşÆÁµÄÃô¸Ğ¶È,»¬¶¯µ±Ç°Ö¡µÄ°Ù·Ö±ÈÒÆ¶¯¸ÃÖ¡£¬¸ÃÖµÔ½Ğ¡Ô½Ãô¸Ğ</td>
+							<td>è§¦æ‘¸å±çš„æ•æ„Ÿåº¦,æ»‘åŠ¨å½“å‰å¸§çš„ç™¾åˆ†æ¯”ç§»åŠ¨è¯¥å¸§ï¼Œè¯¥å€¼è¶Šå°è¶Šæ•æ„Ÿ</td>
 						</tr>
 						<tr>
 							<td>scrollable</td>
 							<td>false</td>
-							<td>ÊÇ·ñÔÊĞí¹ö¶¯¹ö¶¯ÖáÊ±»»ÆÁ</td>
+							<td>æ˜¯å¦å…è®¸æ»šåŠ¨æ»šåŠ¨è½´æ—¶æ¢å±</td>
 						</tr>
 						<tr class="even">
 							<td>beforeEvent(status)</td>
-							<td>(ÎŞ)</td>
-							<td>ÒÆ¶¯Ç°Ö´ĞĞ,·µ»ØflaseÊ±²»ÒÆ¶¯;´«ÈëÒ»¸ö¶ÔÏó,°üº¬£ºindexÊÂ¼ş·¢ÉúÇ°Ë÷Òı,countÖ¡³¤¶È,destination·½Ïò(prevÏòÇ°,nextÏòºó,Êı×ÖÎªÏàÓ¦µÄË÷Òı);</td>
+							<td>(æ— )</td>
+							<td>ç§»åŠ¨å‰æ‰§è¡Œ,è¿”å›flaseæ—¶ä¸ç§»åŠ¨;ä¼ å…¥ä¸€ä¸ªå¯¹è±¡,åŒ…å«ï¼šindexäº‹ä»¶å‘ç”Ÿå‰ç´¢å¼•,countå¸§é•¿åº¦,destinationæ–¹å‘(prevå‘å‰,nextå‘å,æ•°å­—ä¸ºç›¸åº”çš„ç´¢å¼•);</td>
 						</tr>
 						<tr>
 							<td>afterEvent(status)</td>
-							<td>(ÎŞ)</td>
-							<td>ÒÆ¶¯ºóÖ´ĞĞ;´«ÈëÒ»¸ö¶ÔÏó,°üº¬£ºindexÊÂ¼ş·¢ÉúÇ°Ë÷Òı,countÖ¡³¤¶È,destination·½Ïò(prevÏòÇ°,nextÏòºó,Êı×ÖÎªÏàÓ¦µÄË÷Òı);</td>
+							<td>(æ— )</td>
+							<td>ç§»åŠ¨åæ‰§è¡Œ;ä¼ å…¥ä¸€ä¸ªå¯¹è±¡,åŒ…å«ï¼šindexäº‹ä»¶å‘ç”Ÿå‰ç´¢å¼•,countå¸§é•¿åº¦,destinationæ–¹å‘(prevå‘å‰,nextå‘å,æ•°å­—ä¸ºç›¸åº”çš„ç´¢å¼•);</td>
 						</tr>
 					</tbody>
 				</table>
-				<h2> callback(api)²ÎÊı</h2>
+				<h2> callback(api)å‚æ•°</h2>
 				<table>
 					<thead>
 						<tr>
-							<th width="200">·½·¨</th>
-							<th>ËµÃ÷</th>
+							<th width="200">æ–¹æ³•</th>
+							<th>è¯´æ˜</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td>prev()</td>
-							<td>ÏòÇ°Ò»²½</td>
+							<td>å‘å‰ä¸€æ­¥</td>
 						</tr>
 						<tr class="even">
 							<td>next()</td>
-							<td>ÏòºóÒ»²½</td>
+							<td>å‘åä¸€æ­¥</td>
 						</tr>
 						<tr>
 							<td>start()</td>
-							<td>¿ªÊ¼²¥·Å</td>
+							<td>å¼€å§‹æ’­æ”¾</td>
 						</tr>
 						<tr class="even">
 							<td>stop()</td>
-							<td>Í£Ö¹²¥·Å</td>
+							<td>åœæ­¢æ’­æ”¾</td>
 						</tr>
 						<tr>
 							<td>setIndex(index,isAnimate)</td>
-							<td>ÉèÖÃµ±Ç°Ö¡</td>
+							<td>è®¾ç½®å½“å‰å¸§</td>
 						</tr>
 						<tr class="even">
 							<td>setSteps(steps)</td>
-							<td>ÉèÖÃÒÆ¶¯Ö¡Êı</td>
+							<td>è®¾ç½®ç§»åŠ¨å¸§æ•°</td>
 						</tr>
 						<tr>
 							<td>setView(view)</td>
-							<td>ÉèÖÃ¿ÉÊÓÖ¡Êı</td>
+							<td>è®¾ç½®å¯è§†å¸§æ•°</td>
 						</tr>
 						<tr class="even">
 							<td>setDelay(delay)</td>
-							<td>ÉèÖÃ¶¯»­Í£¶ÙÊ±¼ä¼ä¸ô</td>
+							<td>è®¾ç½®åŠ¨ç”»åœé¡¿æ—¶é—´é—´éš”</td>
 						</tr>
 						<tr>
 							<td>setDuration(duration)</td>
-							<td>ÉèÖÃ¶¯»­Ê±³¤</td>
+							<td>è®¾ç½®åŠ¨ç”»æ—¶é•¿</td>
 						</tr>
 						<tr class="even">
 							<td>getIndex()</td>
-							<td>»ñÈ¡µ±Ç°Ö¡</td>
+							<td>è·å–å½“å‰å¸§</td>
 						</tr>
 					</tbody>
 				</table>
