--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 <title>
-21点游戏
+21点纸牌
 </title>
-<script type="text/javascript" language="javascript" src="js/jquery-1.5.js"></script>
+<script type="text/javascript" language="javascript" src="js/jquery-1.6.1.min.js"></script>
 <script type="text/javascript" language="javascript" src="js/main.js"></script>
 <script type="text/javascript" language="javascript" src="js/effect.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -33,8 +33,8 @@
 		 <div id="ins" class="message"></div>
 	  </div>
 	  <div id="logo">
-	  <div id="me"><span class="game">21点纸牌</span><br/><span class="versions">V 1.4.2</span><br/><span class="copy">Diao链自行车&nbsp;&nbsp;版权所有</span></div>
-		 <img src="picture/desk/logo.png" alt="21点游戏"/>
+	  <div id="me"><span class="game">21点纸牌</span><br/><span class="versions">V 1.0.0</span><br/><span class="copy">Diao链自行车&nbsp;&nbsp;版权所有</span></div>
+		 <img src="picture/desk/logo.png" alt="21点纸牌"/>
 	  </div>
 	  <div id="right_bottom">
 		 <div id="mess_box">
