--- a/jquery-scrollbar/index.html
+++ b/jquery-scrollbar/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>silder</title>
+		<title>scrollbar</title>
 		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
 		<style type="text/css">
 			body{
