--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -149,10 +149,10 @@
 				</div>
 			</div>
 			<div class="code">
-				<p>$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:300,delay:5000});</p>
+				<p>$(".slider1").slider({inEndEffect:"cycle",step:2,auto:true,duration:300,delay:5000});</p>
 			</div>
 			<script type="text/javascript">
-				$(".slider1").slider({inEndEffect:"cycle",steps:2,auto:true,duration:300,delay:5000});
+				$(".slider1").slider({inEndEffect:"cycle",step:2,auto:true,duration:300,delay:5000});
 			</script>
 			<div class="slider style2 slider2">
 				<span class="prev"></span>
@@ -293,7 +293,7 @@
 							<td>当鼠标移至相应区域时获得的class</td>
 						</tr>
 						<tr class="even">
-							<td>steps</td>
+							<td>step</td>
 							<td>1</td>
 							<td>移动帧数</td>
 						</tr>
@@ -424,7 +424,7 @@
 							<td>设置当前帧</td>
 						</tr>
 						<tr class="even">
-							<td>setSteps(steps)</td>
+							<td>setSteps(step)</td>
 							<td>设置移动帧数</td>
 						</tr>
 						<tr>
