--- a/finder.html
+++ b/finder.html
@@ -3,9 +3,16 @@
 	<head>
 		<title>寻址-最短路径</title>
 		<style type="text/css">
+			body{
+				font-size:12px;
+				font-family: "Microsoft Yahei",Arial,Helvetica;
+			}
+			button,input{
+				font-family: "Microsoft Yahei",Arial,Helvetica;
+			}
 			.container{
 				width:1200px;
-				margin:0 auto;
+				margin:0 auto 15px;
 				border:1px solid #ccc;
 			}
 			.container .box{
@@ -26,6 +33,19 @@
 			.container .panel input{
 				text-align:center;
 			}
+			.copy{
+				width:1200px;
+				margin:0 auto;
+				text-align:center;
+				color:#666;
+			}
+			.copy a{
+				color:#666;
+				text-decoration:none;
+			}
+			.copy a:hover{
+				text-decoration:underline;
+			}
 		</style>
 	</head>
 	<body>
@@ -42,6 +62,7 @@
 				<label>当前操作:<input id="type" type="text" value="终点" readonly/></label>
 			</div>
 		</div>
+		<div class="copy">&copy; <a href="http://www.passer-by.com" target="_blank">passer-by.com</a></div>
 		<script type="text/javascript">
 			(function(){
 				var $canvas = document.getElementById("canvas");
