--- a/finder.html
+++ b/finder.html
@@ -84,7 +84,7 @@
 				var isMouseDown = false;
 				var type = "end";
 				var type_text = {"end":"终点","start":"起点","pen":"画笔","eraser":"橡皮"};
-				var scroll_top = getScrollTop();
+				var scroll = getScroll();
 				for(var x=0;x<width;x++){
 					map[x] = new Array(height);
 					for(var y =0;y<height;y++){
@@ -93,8 +93,8 @@
 				}
 				$canvas.onmousedown = function(e){
 					isMouseDown = true;
-					var x = Math.floor((e.clientX - this.offsetLeft)/unit);
-					var y = Math.floor((e.clientY - this.offsetTop+scroll_top)/unit);
+					var x = Math.floor((e.clientX - this.offsetLeft+scroll.left)/unit);
+					var y = Math.floor((e.clientY - this.offsetTop+scroll.top)/unit);
 					if(type == "start"){
 						start = [x,y];
 						draw();
@@ -111,8 +111,8 @@
 				};
 				$canvas.onmousemove = function(e){
 					if(isMouseDown){
-						var x = Math.floor((e.clientX - this.offsetLeft)/unit);
-						var y = Math.floor((e.clientY - this.offsetTop+scroll_top)/unit);
+						var x = Math.floor((e.clientX - this.offsetLeft+scroll.left)/unit);
+						var y = Math.floor((e.clientY - this.offsetTop+scroll.top)/unit);
 						if(type == "start"){
 							start = [x,y];
 							draw();
@@ -154,7 +154,7 @@
 					draw();	
 				}
 				window.onscroll = function(){
-					scroll_top = getScrollTop();
+					scroll = getScroll();
 				};
 				draw();
 				function draw(){
@@ -176,14 +176,17 @@
 					}
 				}
 			})();
-			function getScrollTop() {  
-				var scrollPos;  
-				if (window.pageYOffset) {  
-					scrollPos = window.pageYOffset;
+			function getScroll() {  
+				var scrollPos={};  
+				if (window.pageYOffset||window.pageXOffset) {  
+					scrollPos['top'] = window.pageYOffset;
+					scrollPos['left'] = window.pageXOffset;
 				}else if (document.compatMode && document.compatMode != 'BackCompat'){
-					scrollPos = document.documentElement.scrollTop;
+					scrollPos['top'] = document.documentElement.scrollTop;
+					scrollPos['left'] = document.documentElement.scrollLeft;
 				}else if(document.body){
-					scrollPos = document.body.scrollTop;
+					scrollPos['top'] = document.body.scrollTop;
+					scrollPos['left'] = document.body.scrollLeft;
 				}   
 				return scrollPos;   
 			}
@@ -216,6 +219,7 @@
 				}
 				(function(current,path){
 					index++;
+					var hash = {};
 					var new_current = [];
 					var fun = arguments.callee;
 					var next = function(x,y){
