--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -56,6 +56,9 @@
 					api.select('op3');
 				});				
 			});
+			$select.change(function(){
+				console.log("╦д╠Дак");
+			});
 		</script>
 	</body>
 <html>
