--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -443,6 +443,10 @@
 							<td>getIndex()</td>
 							<td>获取当前帧</td>
 						</tr>
+						<tr>
+							<td>resize</td>
+							<td>重置幻灯片参数</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
