--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -444,7 +444,7 @@
 							<td>获取当前帧</td>
 						</tr>
 						<tr>
-							<td>resize</td>
+							<td>resize()</td>
 							<td>重置幻灯片参数</td>
 						</tr>
 					</tbody>
