--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 				<div class="group">
 					<h2>插件库</h2>
 					<ul>
-						<li><a href="/juqery-slider/" target="_blank">幻灯片</a></li>
-						<li><a href="/juqery-scrollbar/" target="_blank">滚动条</a></li>
-						<li><a href="/juqery-select/" target="_blank">下拉框</a></li>
-						<li><a href="/juqery-range/" target="_blank">滑动条</a></li>
-						<li><a href="/juqery-accordion/" target="_blank">手风琴</a></li>
+						<li><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
+						<li><a href="/jquery-scrollbar/" target="_blank">滚动条</a></li>
+						<li><a href="/jquery-select/" target="_blank">下拉框</a></li>
+						<li><a href="/jquery-range/" target="_blank">滑动条</a></li>
+						<li><a href="/jquery-accordion/" target="_blank">手风琴</a></li>
 					</ul>
 				</div>
 			</div>
