--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>range</title>
 		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
 		<style type="text/css">
