--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+๏ปฟ<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>select</title>
 		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
 		<style type="text/css">
@@ -44,11 +45,11 @@
 	<body>
 		<div class="main">
 			<select>
-				<option value="op1">ักฯ๎าป</option>
-				<option value="op2" selected>ักฯ๎ถþ</option>
-				<option value="op3">ักฯ๎ศý</option>
+				<option value="op1">้€้กนไธ€</option>
+				<option value="op2" selected>้€้กนไบ</option>
+				<option value="op3">้€้กนไธ</option>
 			</select>
-			<a id="change" href="javascript:void(0);">ักึะักฯ๎ศý</a>
+			<a id="change" href="javascript:void(0);">้€ไธญ้€้กนไธ</a>
 		</div>
 		<script type="text/javascript">
 			var $select = $("select").select(function(api){
@@ -57,7 +58,7 @@
 				});				
 			});
 			$select.change(function(){
-				console.log("ธฤฑไมห");
+				console.log("ๆ”นๅไบ");
 			});
 		</script>
 	</body>
