--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="utf-8">
 		<title>我的前端库</title>
 		<style type="text/css">
 			body{
