--- a/jquery-accordion/index.html
+++ b/jquery-accordion/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>accordion</title>
 		<link rel="stylesheet" type="text/css" href="cssreset-min.css">
 		<style type="text/css">
