--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 					<h2>算法</h2>
 					<ul>
 						<li><a href="/finder/" target="_blank">最短寻址</a></li>
+						<li><a href="/calc24/" target="_blank">24点计算</a></li>
 					</ul>
 				</div>
 				<div class="group">
