--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 					</ul>
 				</div>
 				<div class="group">
+					<h2>工具</h2>
+					<ul>
+						<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
+					</ul>
+				</div>
+				<div class="group">
 					<h2>插件库</h2>
 					<ul>
 						<li><a href="/jquery-slider/" target="_blank">幻灯片</a></li>
