--- a/useragent/index.html
+++ b/useragent/index.html
@@ -48,7 +48,7 @@
 			}
 			//修正
 			if(!obj.isTrident){
-				isTrident = obj.isIE;
+				obj.isTrident = obj.isIE;
 			}
 			if(obj.isGecko){
 				obj.isGecko = !obj.isWebKit;
