--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -110,7 +110,7 @@
 				line-height: 24px;
 				font-size: 13px;
 			}
-			tr.even {
+			tr:nth-child(2n) {
 				background-color: #f0f5f8;
 			}
 			tr th, tr td {
@@ -262,7 +262,7 @@
 							<td>content</td>
 							<td>轮播内容列表的class</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>navCls</td>
 							<td>nav</td>
 							<td>轮播导航列表的class</td>
@@ -272,7 +272,7 @@
 							<td>prev</td>
 							<td>向前一步的class</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>nextBtnCls</td>
 							<td>next</td>
 							<td>向后一步的class</td>
@@ -282,7 +282,7 @@
 							<td>active</td>
 							<td>导航选中时的class</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>disableBtnCls</td>
 							<td>disable</td>
 							<td>按键不可用时的class</td>
@@ -292,17 +292,12 @@
 							<td>hover</td>
 							<td>当鼠标移至相应区域时获得的class</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>step</td>
 							<td>1</td>
-							<td>移动帧数</td>
+							<td>移动帧数,'auto'为自动调整</td>
 						</tr>
 						<tr>
-							<td>view</td>
-							<td>(计算)</td>
-							<td>可见区域帧数</td>
-						</tr>
-						<tr class="even">
 							<td>direction</td>
 							<td>'x'</td>
 							<td>轮播的方向</td>
@@ -312,7 +307,7 @@
 							<td>switch</td>
 							<td>播放到最后一帧时的效果："switch"表示来回切换,"cycle"表示循环,"none"表示无效果</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>hasTriggers</td>
 							<td>true</td>
 							<td>是否含有导航触发点</td>
@@ -322,7 +317,7 @@
 							<td>'*'</td>
 							<td>触发点的条件(有时需排除一些节点)</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>triggerType</td>
 							<td>mouse</td>
 							<td>导航触发事件:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
@@ -332,7 +327,7 @@
 							<td>0</td>
 							<td>默认选中帧的索引</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>pointerType</td>
 							<td>'click'</td>
 							<td>左右箭头的触发事件:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
@@ -342,7 +337,7 @@
 							<td>false</td>
 							<td>是否自动播放</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>animate</td>
 							<td>true</td>
 							<td>是否使用动画滑动</td>
@@ -352,7 +347,7 @@
 							<td>3000</td>
 							<td>自动播放时停顿的时间间隔</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>duration</td>
 							<td>500</td>
 							<td>轮播的动画时长</td>
@@ -362,7 +357,7 @@
 							<td>'easeIn'</td>
 							<td>切换时的动画效果,可选的动画函数包括:swing,easeIn,easeOut,expoin,expoout,expoinout,elasin,elasout,elasinout,backin,backout,backinout,bouncein,bounceout,bounceinout</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>keyboardAble</td>
 							<td>false</td>
 							<td>是否允许键盘按键控制</td>
@@ -372,7 +367,7 @@
 							<td>true</td>
 							<td>是否允许触碰</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>sensitivity</td>
 							<td>0.4</td>
 							<td>触摸屏的敏感度,滑动当前帧的百分比移动该帧，该值越小越敏感</td>
@@ -382,7 +377,7 @@
 							<td>false</td>
 							<td>是否允许滚动滚动轴时换屏</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>beforeEvent(status)</td>
 							<td>(无)</td>
 							<td>移动前执行,返回flase时不移动;传入一个对象,包含：index事件发生前索引,count帧长度,destination方向(prev向前,next向后,数字为相应的索引);</td>
@@ -407,7 +402,7 @@
 							<td>prev()</td>
 							<td>向前一步</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>next()</td>
 							<td>向后一步</td>
 						</tr>
@@ -415,7 +410,7 @@
 							<td>start()</td>
 							<td>开始播放</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>stop()</td>
 							<td>停止播放</td>
 						</tr>
@@ -423,15 +418,11 @@
 							<td>setIndex(index,isAnimate)</td>
 							<td>设置当前帧</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>setSteps(step)</td>
 							<td>设置移动帧数</td>
 						</tr>
 						<tr>
-							<td>setView(view)</td>
-							<td>设置可视帧数</td>
-						</tr>
-						<tr class="even">
 							<td>setDelay(delay)</td>
 							<td>设置动画停顿时间间隔</td>
 						</tr>
@@ -439,7 +430,7 @@
 							<td>setDuration(duration)</td>
 							<td>设置动画时长</td>
 						</tr>
-						<tr class="even">
+						<tr>
 							<td>getIndex()</td>
 							<td>获取当前帧</td>
 						</tr>
