--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -242,6 +242,33 @@
 			<script type="text/javascript">
 				$(".slider5").slider({inEndEffect:"none",pointerType:"mouse",scrollable:true,hasTriggers:false,duration:1000});
 			</script>
+			<div class="slider style1 slider6">
+				<span class="prev"></span>
+				<span class="next"></span>
+				<div class="container">
+					<ul class="content">
+						<li style="width:180px">1</li>
+						<li style="width:240px">2</li>
+						<li style="width:180px">3</li>
+						<li style="width:240px">4</li>
+						<li style="width:180px">5</li>
+						<li style="width:160px">6</li>
+						<li style="width:240px">7</li>
+						<li style="width:180px">8</li>
+						<li style="width:240px">9</li>
+						<li style="width:180px">10</li>
+						<li style="width:240px">11</li>
+						<li style="width:180px">12</li>
+					</ul>
+				</div>
+			</div>
+			<div class="code">
+				<p>不定大小的帧</p>
+				<p>$(".slider6").slider({hasTriggers:false,duration:1000,step:'auto'});</p>
+			</div>
+			<script type="text/javascript">
+				$(".slider6").slider({hasTriggers:false,duration:1000,step:'auto'});
+			</script>
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
@@ -251,8 +278,8 @@
 				<table>
 					<thead>
 						<tr>
-							<th width="150">参数</th>
-							<th width="80">默认值</th>
+							<th  style="width:150">参数</th>
+							<th  style="width:80">默认值</th>
 							<th>说明</th>
 						</tr>
 					</thead>
@@ -393,7 +420,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th width="200">方法</th>
+							<th  style="width:200">方法</th>
 							<th>说明</th>
 						</tr>
 					</thead>
