--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -72,6 +72,9 @@
 				float: left;
 				margin: 0 10px;
 			}
+			.style1 .content li.w24{
+				width:240px;
+			}
 			.style2{
 				width:220px;
 			}
@@ -247,18 +250,18 @@
 				<span class="next"></span>
 				<div class="container">
 					<ul class="content">
-						<li style="width:180px">1</li>
-						<li style="width:240px">2</li>
-						<li style="width:180px">3</li>
-						<li style="width:240px">4</li>
-						<li style="width:180px">5</li>
-						<li style="width:160px">6</li>
-						<li style="width:240px">7</li>
-						<li style="width:180px">8</li>
-						<li style="width:240px">9</li>
-						<li style="width:180px">10</li>
-						<li style="width:240px">11</li>
-						<li style="width:160px">12</li>
+						<li class="w24">1</li>
+						<li>2</li>
+						<li>3</li>
+						<li class="w24">4</li>
+						<li>5</li>
+						<li>6</li>
+						<li>7</li>
+						<li class="w24">8</li>
+						<li>9</li>
+						<li>10</li>
+						<li class="w24">11</li>
+						<li>12</li>
 					</ul>
 				</div>
 			</div>
